--- a/package.json
+++ b/package.json
@@ -18,7 +18,13 @@
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
+    "graphology": "^0.21.0",
+    "graphology-generators": "^0.11.0",
+    "graphology-layout": "^0.4.0",
+    "graphology-layout-forceatlas2": "^0.6.1",
+    "graphology-types": "^0.19.5",
     "rxjs": "~6.6.0",
+    "sigma": "^2.0.0-beta12",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
